test/should-fail/缺少endglobals-2.j
globals
    string a = "aa
bb
cc"
    integer b = 0